Refactor from util.List to vavr.List: Immutability and no stram- collect :)